# AlkaLauncher

./: .gitignore  FONTS-LICENSE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.agent/workflows/: discord-rich-presence.md
.github/: RELEASE-SETUP.md
.github/workflows/: release.yml
src/: App.tsx  bindings.ts  constants.ts  index.css  index.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  discord.rs  error.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: library.rs  mod.rs  settings.rs  system.rs  vndb.rs
src/api/: games.ts  index.ts  settings.ts  vndb.ts
src/components/: GameCard.tsx  LibraryToolbar.tsx  Sidebar.tsx  TitleBar.tsx  UpdateDialog.tsx
src/components/detail/: CharacterCard.tsx  CharacterList.tsx  GameInfoTab.tsx
src/components/layout/: MainLayout.tsx
src/context/: GameContext.tsx  SettingsContext.tsx  VndbContext.tsx  index.tsx
src/hooks/: useLibraryFilters.ts  useUpdater.ts
src/views/: Detail.tsx  Library.tsx
